--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: FW
-brief-intro: Front-end Dev Engineer
+title: Five-Wood
+brief-intro: record & summary & progress
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://five-wood.github.io" # the base hostname & protocol for your site
 
